# fileorg

./: Cargo.toml  README.md  example.config.toml
src/: gui.rs  lib.rs  main.rs
wix/: License.rtf  main.wxs
