[package]
name = "fileorg"
version = "0.1.1"
edition = "2021"
authors = ["Infernum <infernum1212@gmail.com>"]
description = "A simple File Organizer CLI tool made in rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Infernum1/fileorg"
keywords = ["file", "organize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
