[package]
name = "fileorg"
version = "0.2.0"
edition = "2021"
authors = ["Infernum <infernum1212@gmail.com>"]
description = "A simple File Organizer CLI tool made in rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Infernum1/fileorg"
keywords = ["file", "organize"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive"] } 
indicatif = "0.17.9"                                
serde = { version = "1.0.217", features = ["derive"] } 
toml = "0.8.19"
