[package]
name = "fileorg"
version = "0.3.0"
edition = "2021"
authors = ["Infernum <infernum1212@gmail.com>"]
description = "A simple File Organizer GUI tool made in rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Infernum1/fileorg"
keywords = ["file", "organize", "gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
indicatif = "0.17"
chrono = "0.4"
eframe = "0.31"
egui = "0.31"
rfd = "0.15"
image = "0.25"

[[bin]]
name = "fileorg"
path = "src/main.rs"

[lib]
name = "fileorg"
path = "src/lib.rs"